@@ -1,4 +1,4 @@
-/* $NetBSD: vga.c,v 1.75 2004/07/28 12:34:04 jmmv Exp $ */
+/* $NetBSD: vga.c,v 1.76 2004/07/29 22:29:37 jmmv Exp $ */
 
 /*
  * Copyright (c) 1995, 1996 Carnegie-Mellon University.
@@ -29,11 +29,13 @@
 
 /* for WSCONS_SUPPORT_PCVTFONTS and WSDISPLAY_CHARFUNCS */
 #include "opt_wsdisplay_compat.h"
+/* for WSDISPLAY_CUSTOM_BORDER */
+#include "opt_wsdisplay_border.h"
 /* for WSDISPLAY_CUSTOM_OUTPUT */
 #include "opt_wsmsgattrs.h"
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: vga.c,v 1.75 2004/07/28 12:34:04 jmmv Exp $");
+__KERNEL_RCSID(0, "$NetBSD: vga.c,v 1.76 2004/07/29 22:29:37 jmmv Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -272,6 +274,10 @@ static int	vga_load_font(void *, void *, struct wsdisplay_font *);
 static int	vga_getwschar(void *, struct wsdisplay_char *);
 static int	vga_putwschar(void *, struct wsdisplay_char *);
 #endif /* WSDISPLAY_CHARFUNCS */
+#ifdef WSDISPLAY_CUSTOM_BORDER
+static u_int	vga_getborder(void *);
+static int	vga_setborder(void *, u_int);
+#endif /* WSDISPLAY_CUSTOM_BORDER */
 
 void vga_doswitch(struct vga_config *);
 
@@ -295,6 +301,13 @@ const struct wsdisplay_accessops vga_accessops = {
 #else
 	NULL,
 #endif
+#ifdef WSDISPLAY_CUSTOM_BORDER
+	vga_getborder,
+	vga_setborder,
+#else /* WSDISPLAY_CUSTOM_BORDER */
+	NULL,
+	NULL,
+#endif /* WSDISPLAY_CUSTOM_BORDER */
 };
 
 /*
@@ -577,6 +590,11 @@ vga_init(struct vga_config *vc, bus_space_tag_t iot, bus_space_tag_t memt)
 	TAILQ_INSERT_HEAD(&vc->vc_fontlist, &vga_builtinfont, next);
 
 	vc->currentfontset1 = vc->currentfontset2 = 0;
+
+	/* This function does all the required sanity checks for us
+	 * (mono video, valid color, etc.); we just don't care about
+	 * possible errors during initialization. */
+	(void)vga_setborder(vc->active, WSDISPLAY_BORDER_COLOR);
 }
 
 void
@@ -1407,3 +1425,39 @@ vga_putwschar(void *cookie, struct wsdisplay_char *wschar)
 	return (pcdisplay_putwschar(&scr->pcs, wschar));
 }
 #endif /* WSDISPLAY_CHARFUNCS */
+
+#ifdef WSDISPLAY_CUSTOM_BORDER
+static u_int
+vga_getborder(void *cookie)
+{
+	struct vgascreen *scr = cookie;
+	struct vga_handle *vh;
+	u_int idx;
+	u_int8_t value;
+
+	if (scr == NULL) return EINVAL;
+	vh = &scr->cfg->hdl;
+	if (vh->vh_mono) return ENODEV;
+
+	value = _vga_attr_read(vh, VGA_ATC_OVERSCAN);
+	for (idx = 0; idx < sizeof(fgansitopc); idx++)
+		if (fgansitopc[idx] == value)
+			break;
+	return idx == sizeof(fgansitopc) ? 0 : idx;
+}
+
+static int
+vga_setborder(void *cookie, u_int value)
+{
+	struct vgascreen *scr = cookie;
+	struct vga_handle *vh;
+
+	if (scr == NULL) return EINVAL;
+	vh = &scr->cfg->hdl;
+	if (vh->vh_mono) return ENODEV;
+	if (value >= sizeof(fgansitopc)) return EINVAL;
+
+	_vga_attr_write(vh, VGA_ATC_OVERSCAN, fgansitopc[value]);
+	return (0);
+}
+#endif /* WSDISPLAY_CUSTOM_BORDER */
